<resources>
    <string name="app_name">MyPhone</string>
    <string name="phone_name">Samsung Galaxy</string>
    <string name="phone_price">$599.99</string>
    <string name="phone_desc">Versions: SM-S901B, SM-S901B/DS (International); SM-S901U (USA);
        SM-S901U1 (USA unlocked); SM-S901W (Canada); SM-S901N (Korea); SM-S9010 (China); SM-S901E
        (Asia/Afrika)</string>
    <string name="memory">256GB | 8GB</string>
    <string name="camera">50mp, f/1.8, 23 mm(wide)</string>
    <string name="bookmark">bookmark</string>
    <string name="judul">Welcome</string>
    <string name="judul2">Back !</string>
    <string name="btn_1">Sign In</string>
    <string name="forgot">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_google">Continue with Google</string>
    <string name="signup">Don't Have an Account ?</string>
</resources>