<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:id="@+id/iv_photo"
        android:layout_below="@+id/text_title"
        android:src="@drawable/samsung"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        android:text="@string/phone_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_below="@+id/iv_photo"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_photo"
        android:text="@string/phone_price"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:text="@string/phone_desc"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
        android:id="@+id/ic_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_desc"
        android:src="@drawable/baseline_smartphone_24"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/text_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/text_desc"
        android:text="@string/memory"
        android:layout_alignBottom="@id/ic_memory"
        android:layout_alignTop="@id/ic_memory"
        android:layout_toEndOf="@id/ic_memory"/>

    <ImageView
        android:id="@+id/ic_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_memory"
        android:src="@drawable/baseline_camera_alt_24"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/text_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/text_memory"
        android:text="@string/camera"
        android:layout_alignBottom="@id/ic_camera"
        android:layout_alignTop="@id/ic_camera"
        android:layout_toEndOf="@id/ic_camera"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/baseline_bookmark_24"
        android:text="@string/bookmark"/>
</RelativeLayout>