<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:foreground="#96222f3e"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:textSize="45dp"
        android:textColorHighlight="@color/white"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/judul"/>
    <TextView
        android:id="@+id/judul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul"
        android:layout_marginLeft="50dp"
        android:textSize="45dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/judul2"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/judul2"
        app:contentPadding="20dp"
        android:layout_marginTop="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp">
            <RelativeLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="15dp">
                <ImageView
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/baseline_alternate_email_24"/>
                <EditText
                    android:id="@+id/input_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username or Email"
                    android:textSize="13dp"
                    android:layout_toRightOf="@+id/email"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row1"
                android:layout_marginHorizontal="15dp">
                <ImageView
                    android:id="@+id/pass"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/baseline_password_24"/>
                <EditText
                    android:id="@+id/input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:textSize="13dp"
                    android:layout_toRightOf="@+id/pass"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:layout_alignParentEnd="true"
                android:textSize="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_below="@id/row2"/>
            <Button
                android:id="@+id/button_signin"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="10dp"
                android:layout_below="@id/forgot"
                android:text="@string/btn_1"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#1b8864"
                />
            <RelativeLayout
                android:id="@+id/batas_or"
                android:layout_below="@id/button_signin"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:backgroundTint="#67d5b1"
                    android:layout_marginHorizontal="20dp"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:textSize="10dp"
                    android:textColor="#177556"
                    android:text="@string/or"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/button_signemail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/batas_or"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="3dp"
                android:background="@drawable/button_border">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/logo_google"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginRight="5dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/google_logo"/>
                    <TextView
                        android:layout_toRightOf="@+id/logo_google"
                        android:id="@+id/buttonWithImageAndText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_google"
                        android:layout_centerVertical="true"
                        android:textSize="10dp"
                        android:textColor="#177556"
                        android:backgroundTint="@color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/button_signemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="10dp"
                android:textColor="#177556"
                android:text="@string/signup"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>